--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 		"hardhat-deploy": "^0.11.10",
 		"hardhat-deploy-tenderly": "^0.1.1",
 		"hardhat-gas-reporter": "^1.0.8",
-		"husky": "^8.0.3",
+		"husky": "^8.0.0",
 		"prettier": "^2.6.2",
 		"prettier-plugin-solidity": "^1.0.0-beta.19",
 		"solhint": "^3.3.7",
@@ -91,6 +91,7 @@
 		"global_variables_settlement:mumbai": "NODE_ENV=mumbai hardhat deploy --network mumbai --export export/abi/mumbai.json --deploy-scripts scripts/set-global-variables",
 		"collateral_pool_scripts:mumbai": "NODE_ENV=mumbai hardhat deploy --network mumbai --export export/abi/mumbai.json --deploy-scripts scripts/collateralPool-script",
 		"add_chainlink_to_price_oracle:mumbai": "NODE_ENV=mumbai hardhat deploy --network mumbai --export export/abi/mumbai.json --deploy-scripts scripts/add-price-proxy-to-oracle",
-		"test": "hardhat test"
+		"test": "hardhat test",
+		"prepare": "husky install"
 	}
 }
