--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"typescript": "^4.7.3"
 	},
 	"dependencies": {
+		"@bitcoinerlab/secp256k1": "^1.0.2",
 		"@chainlink/contracts": "^0.4.2",
 		"@liquality/bitcoin-rpc-provider": "^1.13.0",
 		"@liquality/client": "^1.13.0",
@@ -53,6 +54,7 @@
 		"@uniswap/v2-core": "^1.0.1",
 		"base58check": "^2.0.0",
 		"bech32-buffer": "^0.2.0",
+		"bip32": "^4.0.0",
 		"bitcoin-address-validation": "^2.2.1",
 		"bitcoin_rest_api": "^1.0.1",
 		"bitcoind-rpc": "^0.9.1",
