--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"@chainlink/contracts": "^0.4.2",
 		"@liquality/bitcoin-rpc-provider": "^1.13.0",
 		"@liquality/client": "^1.13.0",
+		"@nomicfoundation/hardhat-network-helpers": "^1.0.8",
 		"@openzeppelin/contracts": "4.3.3",
 		"@openzeppelin/contracts-upgradeable": "^4.7.3",
 		"@openzeppelin/hardhat-upgrades": "1.12.0",
@@ -55,8 +56,8 @@
 		"base58check": "^2.0.0",
 		"bech32-buffer": "^0.2.0",
 		"bip32": "^4.0.0",
-		"bitcoin-address-validation": "^2.2.1",
 		"bitcoin_rest_api": "^1.0.1",
+		"bitcoin-address-validation": "^2.2.1",
 		"bitcoind-rpc": "^0.9.1",
 		"bitcoinjs-lib": "^6.1.0",
 		"config": "^3.3.6",
